# crew_ia

./: .coveragerc  .env.example  .gitignore  AGENTS.md  Makefile  Makefile.addon  README.md  alembic.ini  alembic.ini.bak  codecov.yml  docker-compose.yml  perf-budgets.json  plans.graph  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt  smoke.sh  test_api.db  vercel.json  | id          | uuid
alembic/: env.py
core/: config.py  log.py
docs/: design-tokens.md  glassmorphism.md  perf-budgets.md  vercel-preview.md  web-vitals.md
examples/: task_rapport_80p.json
orchestrator/: hooks_recruit.py
schemas/: llm_sidecar.schema.json
scripts/: lh-ci.mjs  run_extra_tests.sh  seed_agents.py  seed_demo_data.py  smoke.sh  task_plan_start.py  validate_tasks_integration.sh  verify_plan_flow.py
seeds/: agent_models_matrix.json  agent_templates.json
tests/: conftest.py  test_acceptance_normalization.py  test_agent_routing.py  test_agents_model.py  test_config_roles_matrix.py  test_e2e_fallback_provider.py  test_executor_llm_artifact.py  test_executor_llm_overrides.py  test_executor_reallocation.py  test_llm_meta_fallback_fs.py  test_llm_sidecar.py  test_manager_assignments.py  test_manager_fallback_chain.py  test_normalize_super_plan.py  test_openai_backoff.py  test_orchestrator_autoreview.py  test_orchestrator_service.py  test_plan_to_dag.py  test_postgres_adapter.py  test_provider_registry.py  test_qa_report.py  test_recovery_e2e.py  test_registry_recruiter.py  test_role_timeouts.py  test_run_supervisor_integration.py  test_runner_fallback_model_switch.py  (+5 more)
(+603 files in other folders)
